[project]
name = "thisisneat"
version = "0.2.1"
readme = "README.md"
description = "Knowledge graph transformation"
authors = [
    {name="Nikola Vasiljevic", email="nikola.vasiljevic@cognite.com"},
    {name="Anders Albert", email="anders.albert@cognite.com"},
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.3, <3.0.0",
    "cognite-sdk>=7.83.0, <8.0.0",
    "rdflib>=7.0.0, <8.0.0",
    "pydantic>=2.0.0, <3.0.0",
    "PyYAML>=6.0.1, <7.0.0",
    "requests>=2.28.1, <3.0.0",
    "urllib3>=1.26.15, <3.0.0",
    "openpyxl>=3.0.10, <4.0.0",
    "networkx>=3.4.2, <4.0.0",
    "mixpanel>=4.10.1, <5.0.0",
    # Used for loading neat engine
    "packaging>=22.0",
    # NeatEngine dependencies
    "jsonpath-python>=1.0.6, <2.0.0",
    "elementpath>=4.0.0, <5.0.0",
    "pyvis>=0.3.2, <1.0.0",
    # Notebook
    "rich[jupyter]>=13.7.1, <14.0.0",
    # Backport from Python 3.11
    "exceptiongroup>=1.1.3, <2.0.0; python_version < '3.11'",
    "backports.strenum >=1.2, <2.0.0; python_version < '3.11'",
    "typing_extensions>=4.8.0, <5.0.0; python_version < '3.11'",
    "tomli>=2.0.1, <3.0.0; python_version < '3.11'",
    "pyshacl>=0.30.1",
]
[project.optional-dependencies]
lxml = [
    "lxml>=5.3.0, <6.0.0",
]
oxi = [
    "oxrdflib>=0.4.0, <0.5.0",
    "pyoxigraph>=0.4.3, <0.5.0",
]
google = [
    "gspread>=5.0.0, <6.0.0",
    "google-api-python-client>=2.70.0, <3.0.0",
    "google-auth-oauthlib>=1.0.0, <2.0.0",
]
docs = [
    "mkdocs>=1.4.0, <2.0.0",
    "mkdocs-jupyter>=0.25.1, <1.0.0",
    "mkdocs-material-extensions>=1.3.1, <2.0.0",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-authors-plugin>=0.9.4, <1.0.0",
    "mkdocs-gitbook>=0.0.1, <1.0.0",
    "mkdocs-glightbox>=0.4.0, <1.0.0",
    "pymdown-extensions>=10.14.3, <11.0.0",
    "mkdocstrings[python]>=0.25.2, <1.0.0",
    # 3.1.0 breaks nbconvert
    "mistune==3.0.2",
    "mkdocs-autorefs>=0.5.0, <1.0.0",
]

[project.urls]
Documentation = "https://thisisneat.io/"
Homepage = "https://thisisneat.io/"
GitHub = "https://github.com/thisisneat-io/thisisneat"
Changelog = "https://github.com/thisisneat-io/thisisneat/releases"

[dependency-groups]
dev = [
    "twine>=6.0.0, <7.0.0",
    "pytest>=8.0.0, <9.0.0",
    "pytest-cov>=6.0.0, <7.0.0",
    "pytest-notebook",
    "pytest-freezegun>=0.4.2, <1.0.0",
    "pytest-xdist>=3.6.1, <4.0.0",
    "pre-commit>=4.0.0, <5.0.0",
    "jupyter",
    "pytest-regressions",
    "memray>=1.7, <2; platform_system != 'Windows'",
    "httpx",
    "marko>=2.1, <3",
    "mypy>=1.8, <2",
    "pandas-stubs>=2, <3",
    "types-PyYAML>=6, <7",
    "types-openpyxl>=3, <4",
    "types-requests>=2, <3",
    "types-setuptools>=68, <69",
    "types-tqdm>=4, <5",
    "networkx-stubs>=0, <1",
    "cognite-toolkit >= 0.4,< 0.5",
    "tqdm>=4.67.1, <5",
    "deepdiff>=8.2.0, <9.0.0",
    "hypothesis>=6.135.0, <7.0.0",
]

[tool.uv]
package = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for an overview of ruff rules
select = ["E", "W", "F", "I", "RUF", "TID", "UP", "B", "FLY", "PTH", "ERA"]
fixable = ["E", "W", "F", "I", "RUF", "TID", "UP", "B", "FLY", "PTH", "ERA"]
ignore = []

[tool.ruff.lint.isort]
known-third-party = ["cognite.client"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["scripts"]
fix = true


[tool.mypy]
pretty = true
check_untyped_defs = true
ignore_missing_imports = false
explicit_package_bases = true
disallow_untyped_defs = true
allow_redefinition = true
namespace_packages = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["tests/*"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thisisneat"]
