[project]
name = "cognite-neat"
version = "0.0.0"
readme = "README.md"
description = "Knowledge graph transformation"
authors = [
    {name="Nikola Vasiljevic", email="nikola.vasiljevic@cognite.com"},
    {name="Anders Albert", email="anders.albert@cognite.com"},
]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: DAta Modelers",
    "Topic :: Data Modeling :: Knowledge Graphs",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.3, <3.0.0",
    "cognite-sdk>=7.83.0, <8.0.0",
    "rdflib>=7.0.0, <8.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0, <3.0.0",
    "PyYAML>=6.0.1, <7.0.0",
    "requests>=2.28.1, <3.0.0",
    "urllib3>=1.26.15, <3.0.0",
    "openpyxl>=3.0.10, <4.0.0",
    "networkx>=3.4.2, <4.0.0",
    "mixpanel>=4.10.1, <5.0.0",
    # Used for loading neat engine
    "packaging>=22.0",
    # NeatEngine dependencies
    "jsonpath-python>=1.0.6, <2.0.0",
    "elementpath>=4.0.0, <5.0.0",
    "pyvis>=0.3.2, <1.0.0",
    # Notebook
    "rich[jupyter]>=13.7.1, <14.0.0",
    # Backport from Python 3.11
    "exceptiongroup>=1.1.3, <2.0.0; python_version < '3.11'",
    "backports.strenum >=1.2, <2.0.0; python_version < '3.11'",
    "typing_extensions>=4.8.0, <5.0.0; python_version < '3.11'",
    "tomli>=2.0.1, <3.0.0; python_version < '3.11'",
]
[project.optional-dependencies]
lxml = [
    "lxml>=5.3.0, <6.0.0",
]
oxi = [
    "oxrdflib>=0.4.0, <0.5.0",
    "pyoxigraph>=0.4.3, <0.5.0",
]
google = [
    "gspread>=5.0.0, <6.0.0",
    "google-api-python-client>=2.70.0, <3.0.0",
    "google-auth-oauthlib>=1.0.0, <2.0.0",
]
docs = [
    "mkdocs>=1.4.0, <2.0.0",
    "mkdocs-jupyter>=0.25.1, <1.0.0",
    "mkdocs-material-extensions>=1.3.1, <2.0.0",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-authors-plugin>=0.9.4, <1.0.0",
    "mkdocs-gitbook>=0.0.1, <1.0.0",
    "mkdocs-glightbox>=0.4.0, <1.0.0",
    "pymdown-extensions>=10.14.3, <11.0.0",
    "mkdocstrings[python]>=0.25.2, <1.0.0",
    # 3.1.0 breaks nbconvert
    "mistune==3.0.2",
    "mkdocs-autorefs>=0.5.0, <1.0.0",
]

[project.urls]
Documentation = "https://cognite-neat.readthedocs-hosted.com/"
Homepage = "https://cognite-neat.readthedocs-hosted.com/"
GitHub = "https://github.com/cognitedata/neat"
Changelog = "https://github.com/cognitedata/neat/releases"

[dependency-groups]
dev = [
    "twine>=6.0.0, <7.0.0",
    "pytest>=8.0.0, <9.0.0",
    "pytest-cov>=6.0.0, <7.0.0",
    "pytest-notebook",
    "pytest-freezegun>=0.4.2, <1.0.0",
    "pytest-xdist>=3.6.1, <4.0.0",
    "pre-commit>=4.0.0, <5.0.0",
    "jupyter",
    "pytest-regressions",
    "memray>=1.7, <2; platform_system != 'Windows'",
    "httpx",
    "marko>=2.1, <3",
    "mypy>=1.8, <2",
    "pandas-stubs>=2, <3",
    "types-PyYAML>=6, <7",
    "types-openpyxl>=3, <4",
    "types-requests>=2, <3",
    "types-setuptools>=68, <69",
    "types-tqdm>=4, <5",
    "networkx-stubs>=0, <1",
    "cognite-toolkit >= 0.4,< 0.5",
    "tqdm>=4.67.1, <5",
    "deepdiff>=8.2.0, <9.0.0",
    "respx>=0.22.0",
    "hypothesis>=6.135.0, <7.0.0",
    "polyfactory>=2.22.2",
    "pytest-json-report>=1.5.0",
]

[tool.pytest.ini_options]
markers = [
    "serial: mark test to run serially (not in parallel)",
]

[tool.uv]
package = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for an overview of ruff rules
select = ["E", "W", "F", "I", "RUF", "TID", "UP", "B", "FLY", "PTH", "ERA"]
fixable = ["E", "W", "F", "I", "RUF", "TID", "UP", "B", "FLY", "PTH", "ERA"]
ignore = []

[tool.ruff.lint.isort]
known-third-party = ["cognite.client"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["scripts"]
fix = true

[tool.coverage.run]
source = ["cognite.neat"]
omit = [
    # This contains the legacy code. We want to exclude it from coverage reports
    # such that we can increase the coverage threshold for the new code.
    "cognite/neat/_v0/*",
    # The Storage is for running in pyodide and cannot be tested in the normal test suite.
    # We alro exclude the calling of mixpanel in testing.
    "cognite/neat/_session/_usage_analytics/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "from typing_extensions import Self",
]

[tool.mypy]
pretty = true
check_untyped_defs = true
ignore_missing_imports = false
explicit_package_bases = true
disallow_untyped_defs = true
allow_redefinition = true
namespace_packages = true
show_error_codes = true
plugins = ["pydantic.mypy"]
# We use reflection a lot in this codebace, and mypy does not understand that
# finding all subclasses of an abstract class gives you concrete implementations.
# Thus, we disable the type-abstract error.
disable_error_code = ["type-abstract"]
# The _v0 module is legacy code that is not fully typed. We are not planning
# to update it, so we exclude it from mypy checks. Once v1 is released with all features
# from _v0, we will remove this folder.
exclude = ["tests/v0"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
# We use dynamic alias creation as much as possible. This is to ensure
# all aliases are consistentenly camelCase.
warn_required_dynamic_aliases = false

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cognite.neat"
module-root = ""
namespace = true